feat(bootc): container image customizations
https://bootc-dev.github.io/bootc/building/guidance.html

--- a/.github/workflows/build_rhel_bootc.yml
+++ b/.github/workflows/build_rhel_bootc.yml
@@ -1,9 +1,16 @@
-name: Build RHEL bootc image with GHA
+name: Build RHEL bootc image
 on:
   workflow_dispatch:
   push:
-    tags:
-      - "*"
+    branches:
+      - main
+    paths:
+      - "bootc-rhel/**"
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "bootc-rhel/**"
 
 jobs:
   rhel-bootc-image-build:
@@ -23,13 +30,15 @@ jobs:
       # SOURCE_REGISTRY_PASSWORD: "${{ secrets.SOURCE_REGISTRY_PASSWORD }}"
 
       # Containerfile to build
-      CONTAINERFILE: Containerfile
+      CONTAINERFILE: ./bootc-rhel/Containerfile
 
       # Destination image namespace and name (eg: myrepo/myimage)
       DEST_IMAGE: "${{ github.actor }}/${{github.event.repository.name}}"
 
       # List of tags to publish
-      TAGLIST: latest ${{ github.sha }} ${{ github.ref_name }}
+      # For main branch: 'latest' and commit SHA
+      # For other branches/PRs: branch name and commit SHA
+      TAGLIST: ${{ github.ref == 'refs/heads/main' && 'latest' || github.head_ref }} ${{ github.sha }}
 
       # Destination registry for built images
       DEST_REGISTRY_HOST: "ghcr.io"
@@ -46,7 +55,7 @@ jobs:
 
     steps:
       - name: Clone the repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
 
       - name: Get container tools in UBI builder
         run: dnf -y install podman buildah skopeo
@@ -63,7 +72,7 @@ jobs:
           echo $auth > $HOME/.docker/config.json
 
       - name: Log in to the RHT terms based registry
-        uses: redhat-actions/podman-login@v1
+        uses: redhat-actions/podman-login@4934294ad0449894bcd1e9f191899d7292469603
         with:
           registry: ${{ env.SOURCE_REGISTRY_HOST }}
           username: ${{ secrets.SOURCE_REGISTRY_USER }}
@@ -72,14 +81,15 @@ jobs:
 
       - name: Use buildah bud to create the image
         id: build-image
-        uses: redhat-actions/buildah-build@v2
+        uses: redhat-actions/buildah-build@7a95fa7ee0f02d552a32753e7414641a04307056
         with:
+          context: ./bootc-rhel/
           image: ${{ env.DEST_IMAGE }}
           tags: ${{ env.TAGLIST }}
           containerfiles: ${{ env.CONTAINERFILE }}
 
       - name: Log in to the GitHub Container registry
-        uses: redhat-actions/podman-login@v1
+        uses: redhat-actions/podman-login@4934294ad0449894bcd1e9f191899d7292469603
         with:
           registry: ${{ env.DEST_REGISTRY_HOST }}
           username: ${{ github.actor }}
@@ -88,7 +98,7 @@ jobs:
 
       - name: Push to GitHub Container Repository
         id: push-to-ghcr
-        uses: redhat-actions/push-to-registry@v2
+        uses: redhat-actions/push-to-registry@5ed88d269cf581ea9ef6dd6806d01562096bee9c
         with:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
