--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
           # Lowercase the image uri
           echo "IMAGE_REGISTRY=${IMAGE_REGISTRY,,}" >> ${GITHUB_ENV}
           echo "IMAGE_NAME=${IMAGE_NAME,,}" >> ${GITHUB_ENV}
-          echo "TAGLIST=${{ github.ref == 'refs/heads/main' && 'latest' || github.head_ref }} ${{ steps.date.outputs.date }} ${{ github.sha }}" >> ${GITHUB_ENV}
+          echo "TAGLIST=${{ github.ref == 'refs/heads/main' && format('latest {0}', steps.date.outputs.date) || github.head_ref }} ${{ github.sha }}" >> ${GITHUB_ENV}
 
       - name: Checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
