fix(build-disk): workflow (#6)
* fix(build-disk): specify a root filesystem

Some images (like Fedora) do not have a default root filesystem type.

* fix(build-disk): use custom action that supports platform option

* fix(build-disk): configure a default platform for automatic builds

--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -31,7 +31,7 @@ concurrency:
 jobs:
   build:
     name: Build disk images
-    runs-on: ${{ inputs.platform == 'amd64' && 'ubuntu-24.04' || 'ubuntu-24.04-arm' }}
+    runs-on: ${{ inputs.platform == 'arm64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
     strategy:
       fail-fast: false
       matrix:
@@ -74,14 +74,15 @@ jobs:
 
       - name: Build disk images
         id: build
-        uses: osbuild/bootc-image-builder-action@a7dc780ea6ed534c7098bd4d01e766391d3d9ebc
+        uses: hanthor/bootc-image-builder-action@3dd308c8c20f887a53cddd66a37ee37f7deb38eb # add platform option
         with:
           builder-image: ${{ env.BIB_IMAGE }}
           config-file: ${{ matrix.disk-type == 'anaconda-iso' && './bootc-ucore/disk_config/iso.toml' || './bootc-ucore/disk_config/disk.toml' }}
           image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}
           chown: ${{ env.USER_UID }}:${{ env.USER_GID }}
           types: ${{ matrix.disk-type }}
-          additional-args: --use-librepo=True
+          additional-args: --rootfs btrfs --use-librepo=True
+          platform: linux/${{ inputs.platform || 'amd64' }}
 
       - name: Upload disk images and Checksum to Job Artifacts
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
