--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - "bootc-ucore/**"
   schedule:
-    - cron: "05 10 * * *" # 10:05am UTC everyday
+    - cron: "0 1 * * Fri" # 1:00am UTC every Friday
   push:
     branches:
       - main
