--- a/bootc-ucore/Containerfile
+++ b/bootc-ucore/Containerfile
@@ -26,6 +26,8 @@ RUN --mount=type=bind,from=ctx,source=/,target=/ctx \
   --mount=type=tmpfs,dst=/tmp \
   /ctx/build.sh
 
+COPY etc etc
+
 ### LINTING
 ## Verify final image and contents are correct.
 RUN bootc container lint
