--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -16,7 +16,7 @@ on:
         type: choice
         options:
           - amd64
-          - arm64
+          #- arm64
 
 env:
   IMAGE_NAME: ${{ github.event.repository.name }}-ucore # output of build.yml, keep in sync
@@ -74,7 +74,7 @@ jobs:
 
       - name: Build disk images
         id: build
-        uses: hanthor/bootc-image-builder-action@337a9ae97b7deddd955c78525296e598dddf2479 # add platform option
+        uses: osbuild/bootc-image-builder-action@a7dc780ea6ed534c7098bd4d01e766391d3d9ebc
         with:
           builder-image: ${{ env.BIB_IMAGE }}
           config-file: ${{ matrix.disk-type == 'anaconda-iso' && './bootc-ucore/disk_config/iso.toml' || './bootc-ucore/disk_config/disk.toml' }}
@@ -82,7 +82,6 @@ jobs:
           chown: ${{ env.USER_UID }}:${{ env.USER_GID }}
           types: ${{ matrix.disk-type }}
           additional-args: --rootfs btrfs --use-librepo=True
-          platform: linux/${{ inputs.platform || 'amd64' }}
 
       - name: Upload disk images and Checksum to Job Artifacts
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
