feat(build-disk): enable arm64 support

--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -15,7 +15,7 @@ on:
         type: choice
         options:
           - amd64
-          #- arm64
+          - arm64
 
 env:
   IMAGE_NAME: ${{ github.event.repository.name }}-ucore # output of build.yml, keep in sync
