--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -65,7 +65,7 @@ jobs:
           image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DEFAULT_TAG }}
           chown: ${{ env.USER_UID }}:${{ env.USER_GID }}
           types: anaconda-iso
-          additional-args: --rootfs btrfs --use-librepo=True
+          additional-args: --rootfs xfs --use-librepo=True
 
       - name: Upload disk images and Checksum to Job Artifacts
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
