--- a/bootc-ucore/recipes/recipe.yml
+++ b/bootc-ucore/recipes/recipe.yml
@@ -16,3 +16,11 @@ platforms:
 # module configuration, executed in order
 modules:
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
+
+  - type: systemd
+
+  - type: justfiles
+    validate: true
+    install: true
+    include:
+      - home-assistant.just
